--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "googleapis": "^39.2.0",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.0",
+    "request": "^2.88.0"
   }
 }
