--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^39.2.0",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.0",
+    "redis": "^2.8.0",
     "request": "^2.88.0"
   }
 }
